roles/openshift-apps/release-monitoring/files/deploymentconfig.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: release-monitoring-web
      service: web
    name: release-monitoring-web
  spec:
    replicas: 1
    selector:
      deploymentconfig: release-monitoring-web
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
        pre:
          failurePolicy: Abort
          execNewPod:
            containerName: release-monitoring-web
            command: [ /bin/sh, -i, -c, "alembic-3 -c /etc/anitya/alembic.ini upgrade head" ]
            volumes:
              - config-volume
      resources: {}
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: release-monitoring-web
          deploymentconfig: release-monitoring-web
      spec:
        containers:
        - name: release-monitoring-web
          image: release-monitoring/release-monitoring-web:latest
          command:
            - bash
          args:
            - /etc/anitya/start.sh
          ports:
          - containerPort: 8080
          resources: {}
          volumeMounts:
          - name: config-volume
            mountPath: /etc/anitya
            readOnly: true
          - name: fedora-messaging-config-volume
            mountPath: /etc/fedora-messaging
            readOnly: true
          - name: fedora-messaging-ca-volume
            mountPath: /etc/pki/rabbitmq/ca
            readOnly: true
          - name: fedora-messaging-key-volume
            mountPath: /etc/pki/rabbitmq/key
            readOnly: true
          - name: fedora-messaging-cert-volume
            mountPath: /etc/pki/rabbitmq/cert
            readOnly: true
          readinessProbe:
            timeoutSeconds: 1
            initialDelaySeconds: 5
            httpGet:
              path: /
              port: 8080
          livenessProbe:
            timeoutSeconds: 1
            initialDelaySeconds: 30
            httpGet:
              path: /
              port: 8080
        volumes:
        - name: config-volume
          configMap:
            name: release-monitoring-configmap
        - name: fedora-messaging-config-volume
          configMap:
            name: fedora-messaging-configmap
        - name: fedora-messaging-ca-volume
          secret:
            secretName: release-monitoring-fedora-messaging-ca
        - name: fedora-messaging-key-volume
          secret:
            secretName: release-monitoring-fedora-messaging-key
        - name: fedora-messaging-cert-volume
          secret:
            secretName: release-monitoring-fedora-messaging-cert
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - release-monitoring-web
        from:
          kind: ImageStreamTag
          name: release-monitoring-web:latest
          namespace: release-monitoring
      type: ImageChange
    - type: ConfigChange
kind: List
metadata: {}
