roles/openshift-apps/release-monitoring/files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: release-monitoring-web
  labels:
    app: release-monitoring
  namespace: release-monitoring
spec:
  ports:
    - name: web
      port: 8080
      targetPort: 8080
    - name: 9940-tcp
      port: 9940
      protocol: TCP
      targetPort: 9940
  selector:
    deploymentconfig: release-monitoring-web
    service: web
---
apiVersion: v1
kind: Service
metadata:
  name: release-monitoring-fedmsg
  labels:
    app: release-monitoring
  namespace: release-monitoring
spec:
  ports:
    - name: fedmsg
      port: 9940
      protocol: TCP
      targetPort: 9940
  selector:
    deploymentconfig: release-monitoring-web
