roles/openshift-apps/release-monitoring/files/route.yml
apiVersion: v1
kind: Route
metadata:
  name: release-monitoring-web
  labels:
    app: release-monitoring
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: release-monitoring-web
